--- a/data/com.github.camellan.placesindicator.desktop.in
+++ b/data/com.github.camellan.placesindicator.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Places Indicator
 GenericName=Places Indicator
-Comment=Quick access to Your Bookmarks in File manager
+Comment=Quick access to the default folder and custom bookmarks File Manager
 Categories=System;
 Exec=com.github.camellan.placesindicator
 Icon=com.github.camellan.placesindicator
