--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
-Source: com.github.camellan.placeindicator
+Source: com.github.camellan.placesindicator
 Section: x11
 Priority: optional
-Maintainer: Cody Garver <cody@elementary.io>
+Maintainer: Andrey Kultyapov <camellan@yandex.ru>
 Build-Depends: cmake (>= 2.8),
                debhelper (>= 9),
                libgtk-3-dev,
@@ -11,7 +11,7 @@ Build-Depends: cmake (>= 2.8),
                valac (>= 0.40.0)
 Standards-Version: 3.9.3
 
-Package: com.github.camellan.placeindicator
+Package: com.github.camellan.placesindicator
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Hey young world
