--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: com.github.camellan.placesindicator
 Section: x11
 Priority: extra
 Maintainer: Andrey Kultyapov <camellan@yandex.ru>
-Build-Depends: cmake (>= 2.8),
-               debhelper (>= 9),
+Build-Depends: cmake ,
+               debhelper,
                libgtk-3-dev,
                gettext,
                meson,
-               libappindicator3-0.1,
-               valac (>= 0.40.0)
+               appindicator3-0.1,
+               valac
 Standards-Version: 3.9.3
 
 Package: com.github.camellan.placesindicator
