--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: x11
 Priority: extra
 Maintainer: Andrey Kultyapov <camellan@yandex.ru>
 Build-Depends: cmake ,
-               debhelper,
+               debhelper (>= 9)
                libgtk-3-dev,
                gettext,
                meson,
-               appindicator3-0.1,
-               valac
+               libappindicator3-dev,
+               valac (>= 0.26)               
 Standards-Version: 3.9.3
 
 Package: com.github.camellan.placesindicator
