--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: extra
 Maintainer: Andrey Kultyapov <camellan@yandex.ru>
 Build-Depends: cmake ,
-               debhelper (>= 9)
+               debhelper (>= 9),
                libgtk-3-dev,
                gettext,
                meson,
